--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "dependencies": {
-    "expo": "^47.0.0",
-    "next": "~13.1.1",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-web": "~0.18.7"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@expo/next-adapter": "~5.0.0"
-  },
-  "scripts": {
-    "start": "next dev",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "build": "next build"
-  },
-  "version": "1.0.0",
-  "private": true,
-  "name": "ecomfood"
+    "dependencies": {
+        "@react-navigation/native": "^6.1.4",
+        "@react-navigation/native-stack": "^6.9.10",
+        "expo": "^47.0.0",
+        "next": "~13.1.1",
+        "react": "18.1.0",
+        "react-dom": "18.1.0",
+        "react-native": "0.70.5",
+        "react-native-safe-area-context": "4.4.1",
+        "react-native-screens": "~3.18.0",
+        "react-native-web": "~0.18.7"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.19.3",
+        "@expo/next-adapter": "~5.0.0"
+    },
+    "scripts": {
+        "start": "next dev",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web",
+        "build": "next build"
+    },
+    "version": "1.0.0",
+    "private": true,
+    "name": "ecomfood"
 }
